# DatalandQALab

./: .copilotignore  .editorconfig  .env.template  .gitignore  Dashboard.md  Dockerfile  README.md  architecture.md  docker-compose.yml  monitor.db  pgadmin_servers.json.template  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md  pull_request_template.md
.github/copilot/: config.json  rules.md
.github/workflows/: cd.yml  ci.yml  monitor.yml
data/jsons/: concordia.json  covestro.json  deka.json  enbw.json  enel.json  eon.json  iberdrola.json  munichre.json  rwe.json  total.json
data/jsons_invalid/: README.md  test_invalid_yesno.json
docs/: README.md  ai-models-benchmarks.md  copilot-usage.md  dashboard.md  data_frameworks.md  database.md  onboarding.md
infra/: playbook.yml
monitor/: Dockerfile  Home.py  __init__.py  app.py  artifacts.py  categories.py  config.json  config.template.json  esg_monitor.py  main.py  monitor.py  qalab_api.py  scheduled_monitoring.py  utils.py
monitor/output/: monitoring_summary-.json
monitor/pages/: 1_Run.py  2_Analytics.py  3_PDF_Viewer.py  __init__.py
monitor/utils/: __init__.py  dataland.py  db.py  main.py  qalab.py  qalab_api.py
notebooks/: DF-24_Notebook-API.ipynb  E2E.ipynb  E2Ev2.ipynb  Propmt Engineering Test.ipynb  base.ipynb  compare_ng_flows.py  notebook.ipynb  project_demo.ipynb  provide_test_data.ipynb  sfdr.ipynb  test.ipynb  test_existing_company_reports.ipynb  test_false_positives.ipynb
pgadmin/: Dockerfile  custom_entrypoint.sh  pgpass.template  servers.json
qa_lab/: Dockerfile
qa_lab/database/: database_engine.py  database_tables.py
qa_lab/dataland/: __init__.py  api.py  dataland_client.py
qa_lab/prompts/: nuclear-and-gas.json  sfdr.json
qa_lab/tests/database/: test_database_engine.py  test_database_tables.py  test_text_to_doc_intelligence.py
qa_lab/tests/dataland/: test_api.py  test_data_provider.py  test_dataland_client.py  test_dataset_provider.py  test_prompt_services.py  test_provide_test_data.py  test_run_scheduled_processing.py  test_unreviewed_datasets.py
qa_lab/tests/prompts/: test_pages.py
qa_lab/tests/utils/: provide_example_qa_report.py  provide_test_data_collection.py  test_config.py  test_error_handling.py  test_prompts.py  test_slack.py
qa_lab/tests/validator/: test_ai.py  test_dataset_reviewer.py  test_ocr.py  (+9 more)
qa_lab/utils/: config.py  prompts.py  slack.py
qa_lab/validator/: ai.py  ocr.py  scheduler.py  validator.py
qa_lab_monitor/: Dockerfile  __init__.py  config.template.json  main.py  qalab_api.py  utils.py
qa_lab_monitor/tests/: test_main.py  test_qalab_api.py  test_utils.py
scripts/: validate_datapoints.py
src/dataland_qa_lab/: Dockerfile  __init__.py  dummy_for_doctest.py
tests/: test_config.py
tests/data_point_flow/: test_ai.py  test_dataland.py  test_db.py  test_false_positives.py  test_ocr.py  test_review.py  test_scheduler.py
tests/database/: test_database_engine.py  test_text_to_doc_intelligence.py
tests/dataland/: test_alerting.py  test_data_denominator.py  test_data_extraction.py  test_data_provider.py  test_dataland_client.py  test_dataland_e2e.py  test_dataset_provider.py  test_error_handling.py  test_prompt_enigineering.py  test_prompt_services.py  test_prompting_service.py  test_provide_test_data.py  test_run_scheduled_processing.py  test_scheduled_job.py  test_sfdr_prompting_service.py  test_unreviewed_datasets.py  test_upload_test_data.py
tests/end_to_end/: mock_constants.py  test_datapoint_flow_review_dataset_e2e.py  test_datapoint_flow_review_dataset_integration.py  test_datapoint_flow_review_dataset_true_e2e.py  test_report_e2e.py
tests/monitor/: test_esg_categories.py  test_main.py  test_qalab_api.py  test_utils.py
tests/pages/: test_pages.py  test_pages_provider.py
tests/review/: test_dataset_reviewer.py  test_denominator_report_generator.py  test_eligible_not_aligned_report_generator.py  test_extract_number.py  test_non_eligible_generator.py  test_numerator_report_generator.py  test_numeric_value_generator.py  test_report_generator.py  test_revenue_denominator_report_generator.py  test_sfdr_numeric_value_report_generator.py  test_sfdr_report_generator.py  test_yes_no_report_generator.py
tests/utils/: provide_example_qa_report.py  provide_sfdr_test_data_collection.py  provide_test_data_collection.py  provide_test_dataset.py  test_ai.py  test_config.py  test_error_handling.py  test_image_helper.py  test_notifications.py  test_pdf_handler.py  test_prompts.py  test_sfdr_data_collection.py  test_slack.py
(+107 files in other folders)
